--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,14 +29,17 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
+    "@prisma/client": "^5.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "supertest": "^6.3.3",
-    "@nestjs/testing": "^10.0.0"
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
+    "@nestjs/class-validator": "^0.13.4",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
+    "@nestjs/swagger": "^7.1.8",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
@@ -50,7 +53,9 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "^5.1.1",
     "source-map-support": "^0.5.21",
+    "swagger-ui-express": "^5.0.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
@@ -85,6 +90,9 @@
     "coveragePathIgnorePatterns": [
       "<rootDir>/src/main.ts"
     ]
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "eslintConfig": {
     "extends": [
