--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,7 @@
   "license": "ISC",
   "private": false,
   "scripts": {
-    "build": "nest build",
+    "build": "nest build && prisma generate",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "format:check": "prettier --check",
     "start": "nest start",
