--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
     "format:check": "prettier --check",
     "start": "nest start",
     "dev": "nest start --watch --preserveWatchOutput",
+    "prisma": "prisma generate",
     "dev:windows": "nest start --watch --preserveWatchOutput",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
