--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1"
