--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,19 +27,20 @@
     "test:unit": "concurrently \"npm:test\" \"npm:test:e2e\""
   },
   "dependencies": {
-    "@prisma/client": "^5.1.1",
     "@nestjs/class-validator": "^0.13.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
     "@nestjs/testing": "^10.0.0",
+    "@prisma/client": "^5.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/schematics": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
