feat: add jwt service for all

--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,9 @@
     "prisma": {
       "cache": false
     },
+    "prisma:seed": {
+      "cache": false
+    },
     "up": {
       "cache": false
     },
