--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,12 +9,13 @@
   "license": "ISC",
   "private": false,
   "scripts": {
-    "build": "nest build && prisma generate",
+    "build": "prisma generate && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "format:check": "prettier --check",
     "start": "nest start",
     "dev": "nest start --watch --preserveWatchOutput",
     "prisma": "prisma generate",
+    "prisma:seed": "prisma db seed",
     "dev:windows": "nest start --watch --preserveWatchOutput",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -35,7 +36,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
     "@nestjs/testing": "^10.0.0",
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.2.0",
     "bcrypt": "^5.1.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -61,7 +62,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.1.1",
+    "prisma": "^5.2.0",
     "source-map-support": "^0.5.21",
     "swagger-ui-express": "^5.0.0",
     "ts-jest": "^29.1.0",
