--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "email": "morales.patty.jose@gmail.com"
   },
   "scripts": {
-    "dev": "turbo dev -F db && turbo prisma -F api && turbo dev -F api -F client",
+    "dev": "turbo dev -F db && turbo prisma -F api && turbo prisma:seed -F api && turbo dev -F api -F client",
     "dev:windows": "turbo dev -F api -F client",
     "up": "turbo up -F db",
     "build": "turbo build -F client -F api",
@@ -17,7 +17,9 @@
     "format:check": "turbo format:check -F client -F api",
     "test:unit": "turbo test:unit -F client -F api",
     "test:cov": "turbo test:cov -F client -F api",
-    "start": "node apps/api/dist/main"
+    "start": "node apps/api/dist/main",
+    "prisma": "turbo prisma -F api",
+    "prisma:seed": "turbo prisma:seed -F api"
   },
   "license": "ISC",
   "workspaces": [
