feat: add side bar

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -42,7 +42,10 @@
       ],
       "@store/*": [
         "./src/store/*"
-      ]
+      ],
+      "@components/*": [
+        "./src/app/components/*"
+      ],
     }
   },
   "types": [
