--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
   ],
   "devDependencies": {
     "turbo": "v1.10.12"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5"
   }
 }
