feat: add login with jwt

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -34,6 +34,15 @@
       "@pages/*": [
         "./src/app/pages/*"
       ],
+      "@common-components/*": [
+        "./src/app/common-components/*"
+      ],
+      "@api/*": [
+        "./src/app/api/*"
+      ],
+      "@store/*": [
+        "./src/store/*"
+      ]
     }
   },
   "types": [
