feat: add side bar

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -46,6 +46,15 @@
       "@components/*": [
         "./src/app/components/*"
       ],
+      "@assets/*": [
+        "./src/assets/*"
+      ],
+      "@images/*": [
+        "./src/assets/images/*"
+      ],
+      "@menus/*": [
+        "./src/assets/menus/*"
+      ]
     }
   },
   "types": [
