fix: unnecesary imports and update init sql

--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-  "dependencies": {
-    "@nestjs/mapped-types": "*"
-  },
   "name": "library-desktop",
   "private": false,
   "version": "0.0.1",
@@ -29,9 +26,6 @@
     "apps/*"
   ],
   "devDependencies": {
-    "@types/node": "^20.5.1",
-    "ts-node": "^10.9.1",
-    "turbo": "v1.10.12",
-    "typescript": "^5.1.6"
+    "turbo": "v1.10.12"
   }
 }
