--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -37,6 +37,8 @@
     "@nestjs/testing": "^10.0.0",
     "@prisma/client": "^5.2.0",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
