--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -19,11 +19,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mui/icons-material": "^5.14.3",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.6",
+    "@mui/material": "^5.14.6",
     "@vitejs/plugin-react": "^4.0.0",
     "axios": "^1.4.0",
     "formik": "^2.4.3",
-    "@mui/material": "^5.14.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
