--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -23,6 +23,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
+    "@mui/styled-engine": "^5.14.6",
     "@vitejs/plugin-react": "^4.0.0",
     "axios": "^1.4.0",
     "formik": "^2.4.3",
