--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,18 +4,13 @@
     "source.organizeImports": true
   },
   "editor.formatOnSave": true,
+  "editor.quickSuggestions": {
+    "strings": true
+  },
   "editor.tabSize": 2,
   "eslint.lintTask.enable": true,
   "files.eol": "\n",
-  "vitest.commandLine": "npm run -w client test --",
-  "jest.jestCommandLine": "npm run -w api test --",
-  "vitest.exclude": [
-    "**/apps/api/**",
-    "**/node_modules/**",
-    "**/dist/**",
-    "**/cypress/**",
-    "**/.{idea,git,cache,output,temp}/**"
-  ],
+  "jest.jestCommandLine": "npm run -w api -w client test --",
   "jest.autoRun": {
     "onSave": false,
     "onType": false
