--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,10 +20,9 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --coverageThreshold '{}' --passWithNoTests",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage --runInBand --detectOpenHandles",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test": "jest --coverageThreshold '{}' --passWithNoTests --no-cache",
+    "test:watch": "jest --watch --no-cache",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --no-cache",
     "test:e2e": "jest --config ./test/jest-e2e.json --passWithNoTests",
     "test:unit": "concurrently \"npm:test\" \"npm:test:e2e\""
   },
@@ -55,6 +54,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "concurrently": "^8.2.1",
     "eslint": "^8.47.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
@@ -73,32 +73,30 @@
     "typescript": "^5.1.6"
   },
   "jest": {
-    "collectCoverage": true,
     "moduleFileExtensions": [
       "js",
       "json",
       "ts"
     ],
-    "rootDir": "./",
+    "rootDir": ".",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": [
-      "src/**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
     "testEnvironment": "node",
-    "coverageThreshold": {
-      "global": {
-        "branches": 90,
-        "functions": 90,
-        "lines": 90,
-        "statements": 90
-      }
+    "moduleNameMapper": {
+      "@/(.*)": "<rootDir>/src/$1",
+      "@test/(.*)": "<rootDir>/test/$1",
+      "@pr-prisma/(.*)": "<rootDir>/src/prisma/$1",
+      "@materials/(.*)": "<rootDir>/src/materials/$1",
+      "@auth/(.*)": "<rootDir>/src/auth/$1",
+      "@clients/(.*)": "<rootDir>/src/clients/$1",
+      "@admins/(.*)": "<rootDir>/src/admins/$1",
+      "@utils/(.*)": "<rootDir>/src/utils/$1"
     },
-    "coveragePathIgnorePatterns": [
-      "<rootDir>/src/main.ts"
+    "moduleDirectories": [
+      "src",
+      "node_modules"
     ]
   },
   "prisma": {
