--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,7 +16,9 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --log-level warn --write \"**/**/*.{jsx,js,ts,tsx}\"",
     "format:check": "prettier --check",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:unit": "jest --coverageThreshold '{}' --passWithNoTests --no-cache",
+    "test": "jest --coverageThreshold '{}' --passWithNoTests --no-cache"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -37,6 +39,8 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -54,9 +58,29 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": ".",
+    "testRegex": ".*\\.test\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "testEnvironment": "node",
+    "moduleDirectories": [
+      "src",
+      "node_modules"
+    ]
   },
   "eslintConfig": {
     "extends": [
