fix: improve slint

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,13 +9,13 @@
   "license": "ISC",
   "private": false,
   "scripts": {
-    "build": "prisma generate && nest build",
+    "build": "prisma db push && prisma db seed && prisma generate && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "format:check": "prettier --check",
     "start": "nest start",
     "dev": "nest start --watch --preserveWatchOutput",
     "prisma": "prisma generate",
-    "prisma:seed": "prisma db seed",
+    "prisma:seed": "prisma db push && prisma db seed",
     "dev:windows": "nest start --watch --preserveWatchOutput",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
