--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -43,6 +43,9 @@
       "@utils/*": [
         "./src/utils/*"
       ],
+      "@loans/*": [
+        "./src/loans/*"
+      ],
     }
   },
   "include": [
