--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,21 +9,21 @@
   "license": "ISC",
   "private": false,
   "scripts": {
-    "build": "env-cmd -f ../../.env -- prisma generate && env-cmd -f ../../.env -- nest build",
+    "build": "prisma generate && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "format:check": "prettier --check",
-    "start": "env-cmd -f ../../.env nest start",
-    "dev": "env-cmd -f ../../.env nest start --watch --preserveWatchOutput",
-    "prisma": "env-cmd -f ../../.env prisma generate",
-    "prisma:seed": "env-cmd -f ../../.env prisma db push && env-cmd -f ../../.env prisma db seed",
-    "dev:windows": "env-cmd -f ../../.env nest start --watch --preserveWatchOutput",
+    "start": "nest start",
+    "dev": "nest start --watch --preserveWatchOutput",
+    "prisma": "prisma generate",
+    "prisma:seed": "prisma db push && prisma db seed",
+    "dev:windows": "nest start --watch --preserveWatchOutput",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "env-cmd -f ../../.env jest --coverageThreshold '{}' --passWithNoTests --no-cache",
+    "test": "jest --coverageThreshold '{}' --passWithNoTests --no-cache",
     "test:watch": "jest --watch --no-cache",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --no-cache",
-    "test:e2e": "env-cmd -f ../../.env jest --config ./test/jest-e2e.json --passWithNoTests",
+    "test:e2e": "jest --config ./test/jest-e2e.json --passWithNoTests",
     "test:unit": "concurrently \"npm:test\" \"npm:test:e2e\""
   },
   "dependencies": {
@@ -39,7 +39,6 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "env-cmd": "^10.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
