--- a/turbo.json
+++ b/turbo.json
@@ -34,7 +34,14 @@
       ],
       "outputs": [
         "dist/**"
-      ]
+      ],
+      "cache": false
+    },
+    "start": {
+      "dependsOn": [
+        "^build"
+      ],
+      "cache": false
     }
   }
 }
