--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,13 +12,12 @@
     "build": "prisma generate && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "format:check": "prettier --check",
-    "start": "nest start",
     "dev": "nest start --watch --preserveWatchOutput",
     "prisma": "prisma generate",
     "prisma:seed": "prisma db push && prisma db seed",
     "dev:windows": "nest start --watch --preserveWatchOutput",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "node dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --coverageThreshold '{}' --passWithNoTests --no-cache",
     "test:watch": "jest --watch --no-cache",
