--- a/apps/client/electron-builder.json5
+++ b/apps/client/electron-builder.json5
@@ -1,6 +1,6 @@
 {
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  "appId": "YourAppID",
+  "appId": "1",
   "asar": true,
   "directories": {
     "output": "release/${version}"
