--- a/apps/db/package.json
+++ b/apps/db/package.json
@@ -9,7 +9,8 @@
   "license": "ISC",
   "private": false,
   "scripts": {
-    "dev": "docker compose down && docker compose up -d && docker volume prune -f",
-    "up": "docker compose down && docker compose up -d && docker volume prune -f"
+    "dev": "docker compose -f docker-compose-dev.yml down && docker volume rm --force db_postgres-data && docker compose -f docker-compose-dev.yml up -d",
+    "up": "docker compose -f docker-compose-dev.yml down && docker volume rm --force db_postgres-data && docker compose -f docker-compose-dev.yml up -d",
+    "start": "docker compose -f docker-compose-pro.yml down && docker compose -f docker-compose-pro.yml up -d"
   }
 }
