--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format:check": "turbo format:check -F client -F api",
     "test:unit": "turbo test:unit -F client -F api",
     "test:cov": "turbo test:cov -F client -F api",
-    "start": "node apps/api/dist/main",
+    "start": "turbo start -F db && turbo prisma:seed -F api && turbo start -F api -F client",
     "prisma": "turbo prisma -F api",
     "prisma:seed": "turbo prisma:seed -F api"
   },
