--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "turbo dev -F db && turbo prisma:seed -F api && turbo prisma -F api && turbo dev -F api -F client",
-    "dev:windows": "turbo dev -F api -F client",
+    "dev:windows": "turbo prisma:seed -F api && turbo prisma -F api && turbo dev -F api -F client",
     "up": "turbo up -F db",
     "build": "turbo build -F client -F api",
     "lint": "turbo lint -F client -F api",
