--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -46,6 +46,9 @@
       "@loans/*": [
         "./src/loans/*"
       ],
+      "@offices/*": [
+        "./src/offices/*"
+      ],
     }
   },
   "include": [
