--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -49,6 +49,9 @@
       "@offices/*": [
         "./src/offices/*"
       ],
+      "@returns/*": [
+        "./src/returns/*"
+      ],
     }
   },
   "include": [
