--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -96,7 +96,8 @@
       "@utils/(.*)": "<rootDir>/src/utils/$1",
       "@loans/(.*)": "<rootDir>/src/loans/$1",
       "@offices/(.*)": "<rootDir>/src/offices/$1",
-      "@returns/(.*)": "<rootDir>/src/returns/$1"
+      "@returns/(.*)": "<rootDir>/src/returns/$1",
+      "@reserve/(.*)": "<rootDir>/src/reserve/$1"
     },
     "moduleDirectories": [
       "src",
