--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -52,6 +52,10 @@
       "@returns/*": [
         "./src/returns/*"
       ],
+      "@reserve/*": [
+        "./src/reserve/*"
+      ],
+
     }
   },
   "include": [
