feat: update and info Admin

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -55,7 +55,10 @@
       ],
       "@menus/*": [
         "./src/assets/menus/*"
-      ]
+      ],
+      "@services/*": [
+        "./src/app/services/*"
+      ],
     }
   },
   "types": [
