--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -55,7 +55,9 @@
       "@reserve/*": [
         "./src/reserve/*"
       ],
-
+      "@notifications/*": [
+        "./src/notifications/*"
+      ],
     }
   },
   "include": [
