--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -58,6 +58,9 @@
       "@notifications/*": [
         "./src/notifications/*"
       ],
+      "@fine/*": [
+        "./src/fine/*"
+      ],
     }
   },
   "include": [
