fix: heap class

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -67,7 +67,6 @@
   "include": [
     "src",
     "electron",
-    "trees",
     "*.ts",
     "*.js",
     "*.tsx",
@@ -80,11 +79,13 @@
     "src/*.tsx",
     "src/**/*.ts",
     "src/**/*.tsx",
-    "trees/**/.ts",
     "test/*.ts",
     "test/*.tsx",
     "test/**/*.ts",
-    "test/**/*.tsx"
+    "test/**/*.tsx",
+    "trees",
+    "trees/*.ts",
+    "trees/**/*.ts",
   ],
   "references": [
     {
