--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -70,6 +70,9 @@
   "include": [
     "src",
     "electron",
+    "regex",
+    "regex/*.ts",
+    "regex/**/*.ts",
     "*.ts",
     "*.js",
     "*.tsx",
