fix: team enhacements

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -59,6 +59,9 @@
       "@services/*": [
         "./src/app/services/*"
       ],
+      "@hooks/*": [
+        "./src/app/hooks/*"
+      ],
     }
   },
   "types": [
